k3d/archive/ingress-home-dashboard-be-services.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-home-dashboard-be-services
  namespace: default
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /custom
---
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-dashboard-be-services-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-mw-home-dashboard-be-services@kubernetescrd #<namespace>-<middleware-name>@kubernetescrd
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /home-dashboard
            pathType: Prefix
            backend:
              service:
                name: home-dashboard-be
                port:
                  number: 8888
